# deck8-hub

./: .gitignore  CLAUDE.md  README.md
.claude/: workflow-comparison.md
.claude/_docs/: workflows-optimizations.md
.claude/agents/: api-tester.md  architecture-supervisor.md  backend-developer.md  backend-validator.md  bdd-docs-writer.md  block-developer.md  code-reviewer.md  db-developer.md  db-validator.md  demo-video-generator.md  documentation-writer.md  frontend-developer.md  frontend-validator.md  functional-validator.md  mock-analyst.md  product-manager.md  qa-automation.md  release-manager.md  selectors-translator.md  unit-test-writer.md  visual-comparator.md  workflow-maintainer.md
.claude/commands/do/: README.md  create-api.md  create-entity.md  create-migration.md  create-plugin.md  create-theme.md  mock-data.md  npm-publish.md  npm-version.md  (+8 more)
.claude/config/: context.json  github.json  github.schema.json  team.json  team.schema.json  workspace.json  workspace.schema.json
.claude/scripts/: validate-agent-skills.py
.claude/sessions/: 2026-02-15-v2-implementation.md
.claude/skills/: README.md  better-auth-best-practices
.claude/templates/: log.md
.claude/workflows/: README.md  blocks.md  story.md  task.md  tweak.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  hid.rs  keyboard_hook.rs  lib.rs  main.rs  profile.rs  protocol.rs  state.rs
(+181 files in other folders)
