[package]
name = "deck8-hub"
version = "1.0.2"
edition = "2021"

[lib]
name = "deck8_hub"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
hidapi = "2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
enigo = "0.2"
dirs = "6"
tauri-plugin-window-state = "2.4.1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
